# Calyx

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  env.sh
crates/calyx-anneal/: Cargo.toml
crates/calyx-anneal/src/: integration_fsv.rs  ledger_anneal.rs  lib.rs  shadow.rs
crates/calyx-anneal/tests/: admission_record.rs  candidate_synth.rs  degrade.rs  differentiation_gate.rs  frozen_guard_fsv.rs  fsv_corrupt_rebuild.rs  fsv_lens_proposal.rs  growth_curve_fsv.rs  issue392_fsv.rs  issue486_janitor_fsv.rs  j_composite.rs  ledger_anneal.rs  ledger_anneal_fsv.rs  mistake_log_fsv.rs  online_head.rs  online_head_fsv.rs  propose_lens.rs  rebuild_fsv.rs  recalibrate_fsv.rs  record_outcome.rs  recurrence_schedule.rs  regression_assert_fsv.rs  replay_buffer_fsv.rs  restore_fsv.rs  rollback_fsv.rs  scope_forge_fsv.rs  scope_index.rs  scope_index_fsv.rs  scope_loom_fsv.rs  scope_storage.rs  scope_storage_fsv.rs  shadow_fsv.rs  triggers.rs
crates/calyx-assay/: Cargo.toml
crates/calyx-assay/src/: attribution.rs  bootstrap.rs  contract.rs  estimate.rs  gate.rs  ksg.rs  lib.rs  logistic.rs  loom_adapter.rs  nmi.rs  periodicity.rs  projection.rs  recurrence_hazard.rs  special_fn.rs  store.rs  sufficiency.rs
crates/calyx-assay/tests/: aster_materialization_gate_fsv.rs  coverage_scope.rs  formula_coverage_fsv.rs  periodicity_fsv.rs  ph52_total_correlation_tests.rs  ph52_transfer_entropy_tests.rs  recurrence_anchor.rs  recurrence_anchor_fsv.rs  recurrence_hazard_fsv.rs  stage5_fsv.rs
crates/calyx-aster/: Cargo.toml
crates/calyx-aster/examples/: stream_ingest_fsv.rs
crates/calyx-aster/src/: erase.rs  lib.rs  memtable.rs  mmap_col.rs  recurrence.rs  recurrence_tests.rs  storage_names.rs  vault.rs
crates/calyx-aster/tests/: btree_query_fsv.rs  compression_ratio.rs  dedup_manifest_fsv.rs  durable_manifest_assets.rs  issue460_atomic_index_write_fsv.rs  issue460_kv_unsigned_ns_index_fsv.rs  issue461_index_rebuild_fsv.rs  issue471_memtable_fsv.rs  issue472_mmap_fsv.rs  issue473_disk_pressure.rs  issue485_orphan_panel_gc_fsv.rs  issue597_real_restic_crypto_shred.rs  issue815_nonce_envelope_fsv.rs  issue816_ledger_head_anchor_fsv.rs  panel_manifest_persistence_fsv.rs  ph54_fsv.rs  ph58_compaction_gc_fsv.rs  ph58_mvcc_snapshot_gc_fsv.rs  ph58_reader_leases_fsv.rs  ph58_wal_recycler_fsv.rs  ph60_integration.rs  ph61_integration.rs  slot_column_fsv.rs  soak_ph56.rs  soak_ph58.rs  string_metadata_fsv.rs  temporal_manifest_fsv.rs
crates/calyx-cli/: Cargo.toml
crates/calyx-cli/src/: anneal_ab_log.rs  anneal_autotune_report.rs  anneal_bandit_readback.rs  anneal_commands.rs  anneal_deficit_map.rs  anneal_frozen_guard_readback.rs  anneal_goodhart_check.rs  anneal_growth_curve.rs  anneal_head_readback.rs  anneal_intelligence_report.rs  anneal_ledger_readback.rs  anneal_lens_proposal_log.rs  anneal_mistakes_readback.rs  anneal_propose_lens_fixture.rs  anneal_propose_lens_run.rs  anneal_propose_preview.rs  anneal_regression_readback.rs  anneal_replay_readback.rs  anneal_soak.rs  anneal_soak_report.rs  anneal_status.rs  assay_bits_validation.rs  assay_corpus_build.rs  budget_readback.rs  cf_read.rs  cli_support.rs  crash.rs  dedup_audit_readback.rs  dedup_readback.rs  dispatch.rs  durable_write.rs  entry.rs  error.rs  fsv.rs  fsv_vault_health.rs  fsv_vault_health_quarantine.rs  fsv_vault_health_tests.rs  healthcheck.rs  healthcheck_tests.rs  kernel_health_readback.rs  (+37 more)
crates/calyx-cli/tests/: audit_cli.rs  audit_cli_hardening.rs  checkpoint_scan.rs  cli_error_emit_fsv.rs  compact_cli_recovery.rs  compression_report_readback.rs  cx_list_include_slots_readback.rs  dedup_anchor_conflict_property_readback.rs  dedup_anchor_conflict_readback.rs  dedup_check_readback.rs  dedup_ingest_at_readback.rs  dedup_qqp_paws_fsv.rs  issue1243_grounded_summary_replay_fsv.rs  living_concert_fsv.rs  merkle_vault.rs  migrate_verify_cli.rs  navigate_fsv.rs  periodic_recall_readback.rs  ph42_readback_surfaces.rs  readme_assets_contract.rs  recurrence_concurrency_readback.rs  recurrence_series_readback.rs  time_prediction_readback.rs  timetravel_readback_fsv.rs  verify_chain.rs  verify_chain_physical.rs
crates/calyx-core/: Cargo.toml
crates/calyx-core/src/: enums.rs  error.rs  lib.rs  media.rs  security.rs  temporal.rs  traits.rs
crates/calyx-forge/: Cargo.toml  build.rs
crates/calyx-forge/src/: backend.rs  error.rs  lib.rs
crates/calyx-forge/tests/: cuda_parity.rs  ph57_vram_cuda_fsv.rs  ph57_vram_fsv.rs  turboquant_tests.rs
crates/calyx-ledger/: Cargo.toml
crates/calyx-ledger/src/: append.rs  audit.rs  codec.rs  entry.rs  group_commit.rs  lib.rs  merkle.rs  redaction.rs  reproduce.rs  verify.rs
crates/calyx-ledger/tests/: appender_fsv.rs  audit_tests.rs  checkpoint_tests.rs  merkle_tests.rs  reproduce_fusion_fsv.rs
crates/calyx-lodestar/: Cargo.toml
crates/calyx-lodestar/examples/: kernel_health_fsv_driver.rs
crates/calyx-lodestar/src/: aster_bridge.rs  dfvs.rs  discovery_chain.rs  error.rs  incremental.rs  kernel.rs  kernel_answer.rs  kernel_graph.rs  kernel_index.rs  lib.rs  multi_scope.rs  provenance.rs  recall_test.rs  scope_cache.rs  scope_report.rs  summarize.rs
crates/calyx-lodestar/tests/: issue577_ph72_integration_fsv.rs  issue757_summarize_bridge_tests.rs  issue921_lp_solution_validation_fsv.rs  ph32_lodestar_tests.rs  ph33_grounding_gaps_tests.rs  ph33_kernel_answer_tests.rs  ph33_kernel_index_tests.rs  ph33_ledger_provenance_tests.rs  ph33_recall_test_tests.rs  ph34_scope_cache_tests.rs  ph63_kernel_health_tests.rs  temporal_kernel.rs  temporal_kernel_fsv.rs
crates/calyx-loom/: Cargo.toml
crates/calyx-loom/src/: abundance.rs  agreement_graph.rs  cross_term.rs  error.rs  lib.rs  materialization.rs
crates/calyx-loom/tests/: cross_term_fail_closed.rs  recurrence_cross_terms.rs  recurrence_cross_terms_fsv.rs
crates/calyx-oracle/: Cargo.toml
crates/calyx-oracle/src/: complete_test_support.rs  error.rs  lib.rs  types.rs  (+9 more)
crates/calyx-registry/: Cargo.toml
crates/calyx-sextant/: Cargo.toml
crates/calyx-ward/: Cargo.toml
(+988 files in other folders)
