[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/ChrisRoyse/Calyx"
publish = false

[workspace.dependencies]
blake3 = "1"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }
