[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/ChrisRoyse/Calyx"
publish = false

[workspace.dependencies]
blake3 = "1"
crc32fast = "1"
cudarc = { version = "0.19.7", default-features = false }
memmap2 = "0.9"
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }
wide = "1"
