[package]
name = "calyx-anneal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
blake3.workspace = true
proptest.workspace = true
serde_json.workspace = true
