[package]
name = "calyx-assay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-loom = { path = "../calyx-loom" }
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
calyx-lodestar = { path = "../calyx-lodestar" }
calyx-paths = { path = "../calyx-paths" }
calyx-ward = { path = "../calyx-ward" }
proptest.workspace = true
