[package]
name = "calyx-aster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bincode.workspace = true
blake3.workspace = true
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-paths = { path = "../calyx-paths" }
crc32fast.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ulid.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
