[package]
name = "calyx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx"
path = "src/main.rs"

[dependencies]
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-sextant = { path = "../calyx-sextant" }
serde_json.workspace = true

[dev-dependencies]
blake3.workspace = true
calyx-forge = { path = "../calyx-forge" }
calyx-registry = { path = "../calyx-registry" }
