[package]
name = "calyx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx"
path = "src/main.rs"

[dependencies]
calyx-anneal = { path = "../calyx-anneal" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-loom = { path = "../calyx-loom" }
calyx-oracle = { path = "../calyx-oracle" }
calyx-sextant = { path = "../calyx-sextant" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
calyx-assay = { path = "../calyx-assay" }
calyx-forge = { path = "../calyx-forge" }
calyx-registry = { path = "../calyx-registry" }
calyx-ward = { path = "../calyx-ward" }
