[package]
name = "calyx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
