[package]
name = "calyx-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
cudarc = { workspace = true, optional = true, features = ["std", "driver", "dynamic-loading", "cuda-13020"] }
serde.workspace = true
tracing.workspace = true
wide.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
