[package]
name = "calyx-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
calyx-core = { path = "../calyx-core" }
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
