[package]
name = "calyx-lodestar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
calyx-core = { path = "../calyx-core" }
calyx-mincut = { path = "../calyx-mincut" }
calyx-paths = { path = "../calyx-paths" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
