[package]
name = "calyx-lodestar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
calyx-core = { path = "../calyx-core" }
calyx-loom = { path = "../calyx-loom" }
calyx-mincut = { path = "../calyx-mincut" }
calyx-paths = { path = "../calyx-paths" }
calyx-sextant = { path = "../calyx-sextant" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
calyx-aster = { path = "../calyx-aster" }
proptest.workspace = true
serde_json.workspace = true
