[package]
name = "calyx-sextant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-ward = { path = "../calyx-ward" }
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize = "1"

[dev-dependencies]
proptest.workspace = true
sha2.workspace = true
