[package]
name = "calyx-ward"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
